[package]
name = "rust_signatures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rsa = "0.9.2"
sha2 = "0.10.6"
elgamal = { git = "https://github.com/brandonhamilton/rust-elgamal.git", version = "0.1.0" }
